changed logo, color, header and footer

--- a/assets/css/color-1.css
+++ b/assets/css/color-1.css
@@ -2,7 +2,7 @@
   --trevlo-font: "Inter", sans-serif;
   --trevlo-font2: "Plus Jakarta Sans", sans-serif;
   --trevlo-special-font: "Dancing Script", cursive;
-  --trevlo-base: #384BFF;
+  --trevlo-base: #014083;
   --trevlo-base-rgb: 56, 75, 255;
   --trevlo-secondary: #565656;
   --trevlo-secondary-rgb: 86, 86, 86;
